--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,8 @@
   <url>http://maven.apache.org</url>
 
     <properties>
-        <org.springframework.version>4.2.5.RELEASE</org.springframework.version>
-        <jackson.version>2.8.10</jackson.version>
+        <org.springframework.version>4.3.20.RELEASE</org.springframework.version>
+        <jackson.version>[2.9.9.2,)</jackson.version>
         <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
